alligned h3 and h4 in about and projects section to center for desktop version

--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,11 @@ footer {
     font-size: 1.5rem;
   }
 
+  #about h3,
+  #projects h4 {
+    text-align: center;
+  }
+
   .project-container,
   .about-container {
     display: grid;
