--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -97,15 +97,14 @@ section {
   left: 50%;
   transform: translate(-50%, -50%);
   color: $primary_font;
-}
 
-.hero-text h1 {
-  font-size: 12vw;
-}
-
-.hero-text p {
-  font-size: 4vw;
-  color: #fea900;
+  h1 {
+      font-size: 12vw;
+  }
+  p {
+    font-size: 4vw;
+    color: #fea900;
+  }
 }
 
 #about,
@@ -184,17 +183,15 @@ section {
 .project-container {
   border: 2px solid #000000;
   margin-top: 2rem;
-}
-
-.project-container img {
-  width: 47vw;
-  margin-left: 1.2rem;
-  max-width: 32rem;
-}
-
-.project-container p {
-  padding: 0.3rem 0.8rem 0.8rem 0.8rem;
-  font-size: 0.9rem;
+  img {
+    width: 47vw;
+    margin-left: 1.2rem;
+    max-width: 32rem;
+  }
+  p {
+    padding: 0.3rem 0.8rem 0.8rem 0.8rem;
+    font-size: 0.9rem;
+  }
 }
 
 .project-img-container {
@@ -203,12 +200,11 @@ section {
   flex-wrap: wrap;
   padding-bottom: 1rem;
   margin: 0.2rem 1.5rem 0.5rem 1.5rem;
-}
-
-.project-img-container a {
-  color: #68c0ff;
-  padding-right: 1rem;
-  font-size: 0.9rem;
+  a {
+    color: #68c0ff;
+    padding-right: 1rem;
+    font-size: 0.9rem;
+  }
 }
 
 .button-container {
